--- a/src/less/justifiedGallery.less
+++ b/src/less/justifiedGallery.less
@@ -35,12 +35,12 @@
 @-o-keyframes justified-gallery-show-entry-animation {.show-entry-frame};
 @keyframes justified-gallery-show-entry-animation {.show-entry-frame};
 
-.justified-gallery { 
+.justified-gallery {
 	width: 100%;
 	position: relative;
 	overflow: hidden;
 
-	> a, > div {
+	> a, > figure, > div {
 		position: absolute;
 		display: inline-block;
 		overflow: hidden;
@@ -49,8 +49,8 @@
 
 		> img, > a > img {
 			position: absolute;
-			top: 50%; 
-			left: 50%; 
+			top: 50%;
+			left: 50%;
 			margin: 0;
 			padding: 0;
 			border: none;
